--- a/source/RevitDevTool/View/TraceLog.xaml
+++ b/source/RevitDevTool/View/TraceLog.xaml
@@ -43,6 +43,11 @@
                 DockPanel.Dock="Right"
                 Orientation="Horizontal">
                 <ui:Button
+                    Margin="0,0,5,0"
+                    Command="{Binding OpenSettingsCommand}"
+                    Icon="{ui:SymbolIcon Settings32}"
+                    ToolTip="Open Settings" />
+                <ui:Button
                     Command="{Binding ClearCommand}"
                     Content="ClearLog"
                     Icon="{ui:SymbolIcon TextClearFormatting16}"
