--- a/source/RevitDevTool.UI/Controls/TextBox/TextBox.xaml
+++ b/source/RevitDevTool.UI/Controls/TextBox/TextBox.xaml
@@ -57,7 +57,9 @@
                         <Border
                             x:Name="ContentBorder"
                             MinWidth="{TemplateBinding MinWidth}"
-                            MinHeight="{TemplateBinding MinHeight}"
+                            MinHeight="{TemplateBinding MinHeight}"                            
+                            Width="{TemplateBinding Width}"
+                            Height="{TemplateBinding Height}"
                             Padding="0"
                             HorizontalAlignment="Stretch"
                             VerticalAlignment="Stretch"
@@ -133,6 +135,8 @@
                 x:Name="ContentBorder"
                 MinWidth="{TemplateBinding MinWidth}"
                 MinHeight="{TemplateBinding MinHeight}"
+                Width="{TemplateBinding Width}"
+                Height="{TemplateBinding Height}"
                 Padding="0"
                 HorizontalAlignment="Stretch"
                 VerticalAlignment="Stretch"
@@ -287,6 +291,8 @@
                 x:Name="ContentBorder"
                 MinWidth="{TemplateBinding MinWidth}"
                 MinHeight="{TemplateBinding MinHeight}"
+                Width="{TemplateBinding Width}"
+                Height="{TemplateBinding Height}"
                 Padding="0"
                 HorizontalAlignment="Stretch"
                 VerticalAlignment="Stretch"
