refactor(visualization): introduce interfaces for visualization lifecycle and update settings management

--- a/source/RevitDevTool/View/Settings/BoundingBoxVisualizationSettingsView.xaml
+++ b/source/RevitDevTool/View/Settings/BoundingBoxVisualizationSettingsView.xaml
@@ -30,7 +30,7 @@
                 Height="32"
                 DockPanel.Dock="Right">
                 <colorPicker:PortableColorPicker
-                    SelectedColor="{Binding SurfaceColor}"
+                    SelectedColor="{Binding SurfaceColor, Mode=TwoWay, Delay=10}"
                     ShowAlpha="False"
                     ShowFractionalPart="False"
                     SmallChange="5"
@@ -64,7 +64,7 @@
                 Height="32"
                 DockPanel.Dock="Right">
                 <colorPicker:PortableColorPicker
-                    SelectedColor="{Binding EdgeColor}"
+                    SelectedColor="{Binding EdgeColor, Mode=TwoWay, Delay=10}"
                     ShowAlpha="False"
                     ShowFractionalPart="False"
                     SmallChange="5"
@@ -82,7 +82,7 @@
                 Height="32"
                 DockPanel.Dock="Right">
                 <colorPicker:PortableColorPicker
-                    SelectedColor="{Binding AxisColor}"
+                    SelectedColor="{Binding AxisColor, Mode=TwoWay, Delay=10}"
                     ShowAlpha="False"
                     ShowFractionalPart="False"
                     SmallChange="5"
