--- a/source/RevitDevTool/View/Settings/MeshVisualizationSettingsView.xaml
+++ b/source/RevitDevTool/View/Settings/MeshVisualizationSettingsView.xaml
@@ -30,7 +30,7 @@
                 Height="32"
                 DockPanel.Dock="Right">
                 <colorPicker:PortableColorPicker
-                    SelectedColor="{Binding SurfaceColor}"
+                    SelectedColor="{Binding SurfaceColor, Mode=TwoWay, Delay=10}"
                     ShowAlpha="False"
                     ShowFractionalPart="False"
                     SmallChange="5"
@@ -80,7 +80,7 @@
                 Height="32"
                 DockPanel.Dock="Right">
                 <colorPicker:PortableColorPicker
-                    SelectedColor="{Binding MeshColor}"
+                    SelectedColor="{Binding MeshColor, Mode=TwoWay, Delay=10}"
                     ShowAlpha="False"
                     ShowFractionalPart="False"
                     SmallChange="5"
@@ -98,7 +98,7 @@
                 Height="32"
                 DockPanel.Dock="Right">
                 <colorPicker:PortableColorPicker
-                    SelectedColor="{Binding NormalVectorColor}"
+                    SelectedColor="{Binding NormalVectorColor, Mode=TwoWay, Delay=10}"
                     ShowAlpha="False"
                     ShowFractionalPart="False"
                     SmallChange="5"
