refactor(theme): update theme handling and settings integration across visualization components

--- a/source/RevitDevTool/View/Settings/GeneralSettingsView.xaml
+++ b/source/RevitDevTool/View/Settings/GeneralSettingsView.xaml
@@ -36,7 +36,7 @@
 
         <ui:CardAction
             Margin="0,4,0,0"
-            Command="{Binding ResetVisualizationSettingsCommand}"
+            Command="{Binding ResetSettingsCommand}"
             Icon="{ui:SymbolIcon ArrowReset24}">
             <ui:CardAction.Content>
                 <StackPanel>
