update(DockablePane): enhance dockable pane visibility management

--- a/source/RevitDevTool/View/SettingsView.xaml
+++ b/source/RevitDevTool/View/SettingsView.xaml
@@ -44,7 +44,7 @@
                     TargetPageType="{x:Type settings:FaceVisualizationSettingsView}" />
                 <ui:NavigationViewItem
                     Content="Mesh"
-                    Icon="{ui:SymbolIcon ShapeUnion24}"
+                    Icon="{ui:SymbolIcon ShapeExclude24}"
                     TargetPageType="{x:Type settings:MeshVisualizationSettingsView}" />
                 <ui:NavigationViewItem
                     Content="Curve"
@@ -52,7 +52,8 @@
                     TargetPageType="{x:Type settings:PolylineVisualizationSettingsView}" />
                 <ui:NavigationViewItem
                     Content="Solid"
-                    Icon="{ui:SymbolIcon Box24, Filled=True}"
+                    Icon="{ui:SymbolIcon Box24,
+                                         Filled=True}"
                     TargetPageType="{x:Type settings:SolidVisualizationSettingsView}" />
                 <ui:NavigationViewItem
                     Content="Point"
