--- a/source/RevitDevTool/View/Settings/XyzVisualizationSettingsView.xaml
+++ b/source/RevitDevTool/View/Settings/XyzVisualizationSettingsView.xaml
@@ -11,18 +11,6 @@
     d:DesignWidth="600"
     mc:Ignorable="d">
 
-    <Page.Resources>
-        <ResourceDictionary>
-            <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary>
-                    <ResourceDictionary.MergedDictionaries>
-                        <ResourceDictionary Source="pack://application:,,,/ColorPicker;component/Styles/DefaultColorPickerStyle.xaml" />
-                    </ResourceDictionary.MergedDictionaries>
-                </ResourceDictionary>
-            </ResourceDictionary.MergedDictionaries>
-        </ResourceDictionary>
-    </Page.Resources>
-
     <StackPanel Margin="20">
         <CheckBox
             Content="Planes"
@@ -62,7 +50,7 @@
         </StackPanel>
         <DockPanel Margin="0,8,0,0">
             <Grid
-                Width="300"
+                Width="150"
                 Height="32"
                 DockPanel.Dock="Right">
                 <colorPicker:PortableColorPicker
@@ -70,7 +58,7 @@
                     ShowAlpha="False"
                     ShowFractionalPart="False"
                     SmallChange="5"
-                    Style="{StaticResource DefaultColorPickerStyle}"
+                    Style="{DynamicResource DefaultColorPickerStyle}"
                     UseHintColor="False" />
             </Grid>
             <CheckBox
@@ -80,7 +68,7 @@
         </DockPanel>
         <DockPanel Margin="0,8,0,0">
             <Grid
-                Width="300"
+                Width="150"
                 Height="32"
                 DockPanel.Dock="Right">
                 <colorPicker:PortableColorPicker
@@ -88,7 +76,7 @@
                     ShowAlpha="False"
                     ShowFractionalPart="False"
                     SmallChange="5"
-                    Style="{StaticResource DefaultColorPickerStyle}"
+                    Style="{DynamicResource DefaultColorPickerStyle}"
                     UseHintColor="False" />
             </Grid>
             <CheckBox
@@ -98,7 +86,7 @@
         </DockPanel>
         <DockPanel Margin="0,8,0,0">
             <Grid
-                Width="300"
+                Width="150"
                 Height="32"
                 DockPanel.Dock="Right">
                 <colorPicker:PortableColorPicker
@@ -106,7 +94,7 @@
                     ShowAlpha="False"
                     ShowFractionalPart="False"
                     SmallChange="5"
-                    Style="{StaticResource DefaultColorPickerStyle}"
+                    Style="{DynamicResource DefaultColorPickerStyle}"
                     UseHintColor="False" />
             </Grid>
             <CheckBox
