--- a/source/RevitDevTool/Theme/Theme.xaml
+++ b/source/RevitDevTool/Theme/Theme.xaml
@@ -5,5 +5,6 @@
     <ResourceDictionary.MergedDictionaries>
         <ui:ThemesDictionary />
         <ui:ControlsDictionary />
+        <ResourceDictionary Source="pack://application:,,,/ColorPicker;component/styles/defaultcolorpickerstyle.xaml" />
     </ResourceDictionary.MergedDictionaries>
 </ResourceDictionary>
