--- a/source/RevitDevTool/View/Settings/BoundingBoxVisualizationSettingsView.xaml
+++ b/source/RevitDevTool/View/Settings/BoundingBoxVisualizationSettingsView.xaml
@@ -11,22 +11,10 @@
     d:DesignWidth="600"
     mc:Ignorable="d">
 
-    <Page.Resources>
-        <ResourceDictionary>
-            <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary>
-                    <ResourceDictionary.MergedDictionaries>
-                        <ResourceDictionary Source="pack://application:,,,/ColorPicker;component/Styles/DefaultColorPickerStyle.xaml" />
-                    </ResourceDictionary.MergedDictionaries>
-                </ResourceDictionary>
-            </ResourceDictionary.MergedDictionaries>
-        </ResourceDictionary>
-    </Page.Resources>
-
     <StackPanel Margin="20">
         <DockPanel>
             <Grid
-                Width="300"
+                Width="150"
                 Height="32"
                 DockPanel.Dock="Right">
                 <colorPicker:PortableColorPicker
@@ -34,7 +22,7 @@
                     ShowAlpha="False"
                     ShowFractionalPart="False"
                     SmallChange="5"
-                    Style="{StaticResource DefaultColorPickerStyle}"
+                    Style="{DynamicResource DefaultColorPickerStyle}"
                     UseHintColor="False" />
             </Grid>
             <CheckBox
@@ -60,7 +48,7 @@
         </StackPanel>
         <DockPanel Margin="0,8,0,0">
             <Grid
-                Width="300"
+                Width="150"
                 Height="32"
                 DockPanel.Dock="Right">
                 <colorPicker:PortableColorPicker
@@ -68,7 +56,7 @@
                     ShowAlpha="False"
                     ShowFractionalPart="False"
                     SmallChange="5"
-                    Style="{StaticResource DefaultColorPickerStyle}"
+                    Style="{DynamicResource DefaultColorPickerStyle}"
                     UseHintColor="False" />
             </Grid>
             <CheckBox
@@ -78,7 +66,7 @@
         </DockPanel>
         <DockPanel Margin="0,8,0,0">
             <Grid
-                Width="300"
+                Width="150"
                 Height="32"
                 DockPanel.Dock="Right">
                 <colorPicker:PortableColorPicker
@@ -86,7 +74,7 @@
                     ShowAlpha="False"
                     ShowFractionalPart="False"
                     SmallChange="5"
-                    Style="{StaticResource DefaultColorPickerStyle}"
+                    Style="{DynamicResource DefaultColorPickerStyle}"
                     UseHintColor="False" />
             </Grid>
             <CheckBox
