--- a/source/RevitDevTool/View/Settings/SolidVisualizationSettingsView.xaml
+++ b/source/RevitDevTool/View/Settings/SolidVisualizationSettingsView.xaml
@@ -35,7 +35,7 @@
                 <TextBlock Text="Transparency" />
                 <TextBlock
                     HorizontalAlignment="Right"
-                    Text="{Binding Transparency, StringFormat={}{0} %, Mode=OneWay, FallbackValue='12 %'}" />
+                    Text="{Binding Transparency, StringFormat={}{0} %, FallbackValue='12 %'}" />
             </DockPanel>
             <Slider
                 Margin="0,4,0,0"
@@ -51,7 +51,7 @@
                 <TextBlock Text="Scale" />
                 <TextBlock
                     HorizontalAlignment="Right"
-                    Text="{Binding Scale, StringFormat={}{0} %, Mode=OneWay, FallbackValue='12 %'}" />
+                    Text="{Binding Scale, StringFormat={}{0} %, FallbackValue='12 %'}" />
             </DockPanel>
             <Slider
                 Margin="0,4,0,0"
