--- a/source/RevitDevTool/View/Settings/MeshVisualizationSettingsView.xaml
+++ b/source/RevitDevTool/View/Settings/MeshVisualizationSettingsView.xaml
@@ -2,10 +2,11 @@
     x:Class="RevitDevTool.View.Settings.MeshVisualizationSettingsView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:colorPicker="clr-namespace:ColorPicker;assembly=ColorPicker"
+    xmlns:controls="clr-namespace:RevitDevTool.Controls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:settings="clr-namespace:RevitDevTool.ViewModel.Settings"
+    xmlns:ui="http://revitdevtool.com/xaml"
     d:DataContext="{d:DesignInstance settings:MeshVisualizationViewModel}"
     d:DesignHeight="540"
     d:DesignWidth="600"
@@ -13,18 +14,14 @@
 
     <StackPanel Margin="20">
         <DockPanel>
-            <Grid
-                Width="150"
-                Height="32"
-                DockPanel.Dock="Right">
-                <colorPicker:PortableColorPicker
-                    SelectedColor="{Binding SurfaceColor, Mode=TwoWay, Delay=10}"
-                    ShowAlpha="False"
-                    ShowFractionalPart="False"
-                    SmallChange="5"
-                    Style="{DynamicResource DefaultColorPickerStyle}"
-                    UseHintColor="False" />
-            </Grid>
+            <ui:SymbolIcon
+                Margin="8,0,0,0"
+                DockPanel.Dock="Right"
+                FontSize="20"
+                Symbol="Eyedropper20" />
+            <controls:ColorPickerControl
+                DockPanel.Dock="Right"
+                SelectedColor="{Binding SurfaceColor}" />
             <CheckBox
                 Content="Surface"
                 IsChecked="{Binding ShowSurface}"
@@ -63,36 +60,28 @@
                 Value="{Binding Transparency}" />
         </StackPanel>
         <DockPanel Margin="0,8,0,0">
-            <Grid
-                Width="150"
-                Height="32"
-                DockPanel.Dock="Right">
-                <colorPicker:PortableColorPicker
-                    SelectedColor="{Binding MeshColor, Mode=TwoWay, Delay=10}"
-                    ShowAlpha="False"
-                    ShowFractionalPart="False"
-                    SmallChange="5"
-                    Style="{DynamicResource DefaultColorPickerStyle}"
-                    UseHintColor="False" />
-            </Grid>
+            <ui:SymbolIcon
+                Margin="8,0,0,0"
+                DockPanel.Dock="Right"
+                FontSize="20"
+                Symbol="Eyedropper20" />
+            <controls:ColorPickerControl
+                DockPanel.Dock="Right"
+                SelectedColor="{Binding MeshColor}" />
             <CheckBox
                 Content="Mesh grid"
                 IsChecked="{Binding ShowMeshGrid}"
                 TabIndex="1" />
         </DockPanel>
         <DockPanel Margin="0,8,0,0">
-            <Grid
-                Width="150"
-                Height="32"
-                DockPanel.Dock="Right">
-                <colorPicker:PortableColorPicker
-                    SelectedColor="{Binding NormalVectorColor, Mode=TwoWay, Delay=10}"
-                    ShowAlpha="False"
-                    ShowFractionalPart="False"
-                    SmallChange="5"
-                    Style="{DynamicResource DefaultColorPickerStyle}"
-                    UseHintColor="False" />
-            </Grid>
+            <ui:SymbolIcon
+                Margin="8,0,0,0"
+                DockPanel.Dock="Right"
+                FontSize="20"
+                Symbol="Eyedropper20" />
+            <controls:ColorPickerControl
+                DockPanel.Dock="Right"
+                SelectedColor="{Binding NormalVectorColor}" />
             <CheckBox
                 Content="Normal vector"
                 IsChecked="{Binding ShowNormalVector}"
