--- a/source/RevitDevTool/View/Settings/SolidVisualizationSettingsView.xaml
+++ b/source/RevitDevTool/View/Settings/SolidVisualizationSettingsView.xaml
@@ -2,10 +2,11 @@
     x:Class="RevitDevTool.View.Settings.SolidVisualizationSettingsView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:colorPicker="clr-namespace:ColorPicker;assembly=ColorPicker"
+    xmlns:controls="clr-namespace:RevitDevTool.Controls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:settings="clr-namespace:RevitDevTool.ViewModel.Settings"
+    xmlns:ui="http://revitdevtool.com/xaml"
     d:DataContext="{d:DesignInstance settings:SolidVisualizationViewModel}"
     d:DesignHeight="540"
     d:DesignWidth="600"
@@ -13,18 +14,14 @@
 
     <StackPanel Margin="20">
         <DockPanel>
-            <Grid
-                Width="150"
-                Height="32"
-                DockPanel.Dock="Right">
-                <colorPicker:PortableColorPicker
-                    SelectedColor="{Binding FaceColor, Mode=TwoWay, Delay=10}"
-                    ShowAlpha="False"
-                    ShowFractionalPart="False"
-                    SmallChange="5"
-                    Style="{DynamicResource DefaultColorPickerStyle}"
-                    UseHintColor="False" />
-            </Grid>
+            <ui:SymbolIcon
+                Margin="8,0,0,0"
+                DockPanel.Dock="Right"
+                FontSize="20"
+                Symbol="Eyedropper20" />
+            <controls:ColorPickerControl
+                DockPanel.Dock="Right"
+                SelectedColor="{Binding FaceColor}" />
             <CheckBox
                 Content="Faces"
                 IsChecked="{Binding ShowFace}"
@@ -63,18 +60,14 @@
                 Value="{Binding Scale}" />
         </StackPanel>
         <DockPanel Margin="0,8,0,0">
-            <Grid
-                Width="150"
-                Height="32"
-                DockPanel.Dock="Right">
-                <colorPicker:PortableColorPicker
-                    SelectedColor="{Binding EdgeColor, Mode=TwoWay, Delay=10}"
-                    ShowAlpha="False"
-                    ShowFractionalPart="False"
-                    SmallChange="5"
-                    Style="{DynamicResource DefaultColorPickerStyle}"
-                    UseHintColor="False" />
-            </Grid>
+            <ui:SymbolIcon
+                Margin="8,0,0,0"
+                DockPanel.Dock="Right"
+                FontSize="20"
+                Symbol="Eyedropper20" />
+            <controls:ColorPickerControl
+                DockPanel.Dock="Right"
+                SelectedColor="{Binding EdgeColor}" />
             <CheckBox
                 Content="Edges"
                 IsChecked="{Binding ShowEdge}"
