--- a/source/RevitDevTool/View/Settings/XyzVisualizationSettingsView.xaml
+++ b/source/RevitDevTool/View/Settings/XyzVisualizationSettingsView.xaml
@@ -2,10 +2,11 @@
     x:Class="RevitDevTool.View.Settings.XyzVisualizationSettingsView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:colorPicker="clr-namespace:ColorPicker;assembly=ColorPicker"
+    xmlns:controls="clr-namespace:RevitDevTool.Controls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:settings="clr-namespace:RevitDevTool.ViewModel.Settings"
+    xmlns:ui="http://revitdevtool.com/xaml"
     d:DataContext="{d:DesignInstance settings:XyzVisualizationViewModel}"
     d:DesignHeight="540"
     d:DesignWidth="600"
@@ -49,54 +50,42 @@
                 Value="{Binding AxisLength}" />
         </StackPanel>
         <DockPanel Margin="0,8,0,0">
-            <Grid
-                Width="150"
-                Height="32"
-                DockPanel.Dock="Right">
-                <colorPicker:PortableColorPicker
-                    SelectedColor="{Binding XColor, Mode=TwoWay, Delay=10}"
-                    ShowAlpha="False"
-                    ShowFractionalPart="False"
-                    SmallChange="5"
-                    Style="{DynamicResource DefaultColorPickerStyle}"
-                    UseHintColor="False" />
-            </Grid>
+            <ui:SymbolIcon
+                Margin="8,0,0,0"
+                DockPanel.Dock="Right"
+                FontSize="20"
+                Symbol="Eyedropper20" />
+            <controls:ColorPickerControl
+                DockPanel.Dock="Right"
+                SelectedColor="{Binding XColor}" />
             <CheckBox
                 Content="X axis"
                 IsChecked="{Binding ShowXAxis}"
                 TabIndex="1" />
         </DockPanel>
         <DockPanel Margin="0,8,0,0">
-            <Grid
-                Width="150"
-                Height="32"
-                DockPanel.Dock="Right">
-                <colorPicker:PortableColorPicker
-                    SelectedColor="{Binding YColor, Mode=TwoWay, Delay=10}"
-                    ShowAlpha="False"
-                    ShowFractionalPart="False"
-                    SmallChange="5"
-                    Style="{DynamicResource DefaultColorPickerStyle}"
-                    UseHintColor="False" />
-            </Grid>
+            <ui:SymbolIcon
+                Margin="8,0,0,0"
+                DockPanel.Dock="Right"
+                FontSize="20"
+                Symbol="Eyedropper20" />
+            <controls:ColorPickerControl
+                DockPanel.Dock="Right"
+                SelectedColor="{Binding YColor}" />
             <CheckBox
                 Content="Y axis"
                 IsChecked="{Binding ShowYAxis}"
                 TabIndex="2" />
         </DockPanel>
         <DockPanel Margin="0,8,0,0">
-            <Grid
-                Width="150"
-                Height="32"
-                DockPanel.Dock="Right">
-                <colorPicker:PortableColorPicker
-                    SelectedColor="{Binding ZColor, Mode=TwoWay, Delay=10}"
-                    ShowAlpha="False"
-                    ShowFractionalPart="False"
-                    SmallChange="5"
-                    Style="{DynamicResource DefaultColorPickerStyle}"
-                    UseHintColor="False" />
-            </Grid>
+            <ui:SymbolIcon
+                Margin="8,0,0,0"
+                DockPanel.Dock="Right"
+                FontSize="20"
+                Symbol="Eyedropper20" />
+            <controls:ColorPickerControl
+                DockPanel.Dock="Right"
+                SelectedColor="{Binding ZColor}" />
             <CheckBox
                 Content="Z axis"
                 IsChecked="{Binding ShowZAxis}"
