update: enhance TraceLog functionality
- completely unsubcribe when panel not visible
- change WindowStartupLocation to CenterOwner

--- a/source/RevitDevTool/View/SettingsView.xaml
+++ b/source/RevitDevTool/View/SettingsView.xaml
@@ -15,7 +15,7 @@
     Foreground="{DynamicResource TextFillColorPrimaryBrush}"
     WindowBackdropType="Mica"
     WindowCornerPreference="Round"
-    WindowStartupLocation="CenterScreen"
+    WindowStartupLocation="CenterOwner"
     mc:Ignorable="d">
 
     <Grid>
