--- a/source/RevitDevTool/View/SettingsWindow.xaml
+++ b/source/RevitDevTool/View/SettingsWindow.xaml
@@ -1,5 +1,5 @@
 ﻿<ui:FluentWindow
-    x:Class="RevitDevTool.View.SettingsView"
+    x:Class="RevitDevTool.View.SettingsWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
