--- a/source/RevitDevTool/View/TraceLogPage.xaml
+++ b/source/RevitDevTool/View/TraceLogPage.xaml
@@ -16,6 +16,10 @@
 
     <Page.Resources>
         <ResourceDictionary>
+            <!-- <ResourceDictionary.MergedDictionaries> -->
+            <!--     <ui:ThemesDictionary Theme="Light" /> -->
+            <!--     <ui:ControlsDictionary /> -->
+            <!-- </ResourceDictionary.MergedDictionaries> -->
             <ObjectDataProvider
                 x:Key="LogLevelProvider"
                 MethodName="GetValues"
