--- a/source/RevitDevTool/View/TraceLogWindow.xaml
+++ b/source/RevitDevTool/View/TraceLogWindow.xaml
@@ -2,6 +2,7 @@
     x:Class="RevitDevTool.View.TraceLogWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:commands="clr-namespace:RevitDevTool.Commands"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:ui="http://revitdevtool.com/xaml"
@@ -10,17 +11,22 @@
     Height="700"
     ui:Design.Background="{DynamicResource ApplicationBackgroundBrush}"
     ui:Design.Foreground="{DynamicResource TextFillColorPrimaryBrush}"
-    ExtendsContentIntoTitleBar="True"
-    WindowBackdropType="Auto"
-    WindowCornerPreference="Round"
+    ShowInTaskbar="False"
     WindowStartupLocation="CenterOwner"
     mc:Ignorable="d">
 
+    <!-- <FrameworkElement.Resources> -->
+    <!--     <ResourceDictionary> -->
+    <!--         <ResourceDictionary.MergedDictionaries> -->
+    <!--             <ui:ThemesDictionary Theme="Light" /> -->
+    <!--             <ui:ControlsDictionary /> -->
+    <!--         </ResourceDictionary.MergedDictionaries> -->
+    <!--     </ResourceDictionary> -->
+    <!-- </FrameworkElement.Resources> -->
+
     <Grid>
         <ui:TitleBar
-            x:Name="TitleBar"
-            Title="Trace Log"
-            VerticalAlignment="Top"
+            Title="{x:Static commands:TraceCommand.CommandName}"
             ShowMaximize="True"
             ShowMinimize="True" />
         <Frame
